Code refactoring!